--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -615,7 +615,7 @@
 "Up to 5000 contacts can be backed up." = "Ошибка резервного копирования контактов, так как у вас больше контактов, чем поддерживаемых верхних пределов.";
 "LifeboxSmallPopUpTitle" = "Хранилище lifebox практически заполнено!";
 "LifeboxSmallPopUpSubTitle" = "Посмотрите возможные варианты обновления аккаунта lifebox.";
-"LifeboxSmallPopUpCheckBoxTex" = "Больше не показывать";
+"LifeboxSmallPopUpCheckBoxTex" = "Больше не показывать!";
 "LifeboxSmallPopUpFirstButtonText" = "ОК";
 "LifeboxSmallPopUpSecondButtonText" = "Улучшить";
 "has_remained_lifebox_usage" = "%@ из %@ осталось (только для lifebox)";
@@ -1334,8 +1334,8 @@
 "hide_successed_alert_with_people_album_title" = "Фотография(ии) выбранного человека были скрыты.";
 "hide_successed_alert_people_album_title" = "Скрыть нежелательных людей и связанные с ними воспоминания!";
 "hide_successed_alert_people_album_description" = "Вы можете скрыть все воспоминания, связанные с человеком, одним щелчком мыши или отправить их в корзину. Вы можете получить доступ к скрытым фотографиям только в альбоме \"Скрытый\".";
-"hide_successed_alert_do_not_show_this_message" = "Больше не показывать это сообщение!";
-"hide_successed_alert_view_people_album" = "Просмотреть альбом Люди";
+"hide_successed_alert_do_not_show_this_message" = "Больше не показывать!";
+"hide_successed_alert_view_people_album" = "Альбом Люди";
 "smash_successed_alert_title" = "Успешно сохранено в галерее вашего устройства и загружено на lifebox!";
 "smash_successed_alert_second_title" = "Что бы вы хотели сделать дальше?";
 "smash_successed_alert_description" = "Теперь вы можете поделиться отредактированной фотографией со своими друзьями. Также вы можете избавиться от нежелательных воспоминаний в ленте lifebox, скрыв или удалив одним щелчком мыши, перейти в альбом «Люди».";
@@ -1483,3 +1483,4 @@
 "offer_store_promo" = "Promo";
 "offer_store_apple_store" = "Apple Store";
 "offer_store_google_store" = "Google Play Store";
+"remove_albums_success_message" = "альбом(ы) удален";
