--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1479,3 +1479,4 @@
 "offer_store_promo" = "Promo";
 "offer_store_apple_store" = "Apple Store";
 "offer_store_google_store" = "Google Play Store";
+"remove_albums_success_message" = "Albüm(ler) kaldırıldı.";
