--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -424,7 +424,7 @@
 "Things" = "Things";
 "Places" = "Places";
 "Musics" = "Musics";
-"hide_album_action_shit" = "Hide Album";
+"hide_album_action_sheet" = "Hide Album";
 "Your Uploads" = "Your Uploads";
 "Create a story" = "Create a story";
 "Please Choose 20 files at most" = "Please choose maximum 20 photos";
