--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1419,7 +1419,7 @@
 "mobile_payment_open_popup_description_bold_range" = "";
 "mobile_payment_open_popup_later_button" = "Позже";
 "mobile_payment_open_popup_continue_button" = "Продолжить";
-"we_recommend" = "Наше Специальное Предложение!";
+"we_recommend" = "Специальное Предложение!";
 "show_more" = "Показать Функции";
 "show_less" = "Закрыть";
 "face_recognition_package_description" = "+ Неограниченное Распознавание Лиц&Объектов& Местоположения";
@@ -1433,16 +1433,16 @@
 "settings_action_sheet_profile_details" = "Детали профиля";
 "settings_action_sheet_edit_profile_photo" = "Обновить фотографию профиля";
 "original_сopy_package_description" = "+ Хранение в Оригинальном Качестве";
-"become_premium_navbar_title" = "Наше Специальное Предложение!";
-"become_premium_header_default_title" = "У нас есть специальное предложение для вас!";
+"become_premium_navbar_title" = "Специальное Предложение!";
+"become_premium_header_default_title" = "Специальное предложение для вас!";
 "become_premium_header_default_subtitle" = "Хотите сохранить ваши воспоминания в оригинальном качестве? Может быть, вам нужна помощь в организации ваших фотографий и контактов? Станьте Premium -участником и позвольте lifebox облегчить вашу жизнь. Проверьте наши Premium функции и специальные предложения для вас.";
-"become_premium_header_people_title" = "У нас есть специальное предложение для вас!";
+"become_premium_header_people_title" = "Специальное предложение для вас!";
 "become_premium_header_people_subtitle" = "Хотите сохранить ваши воспоминания в оригинальном качестве? Может быть, вам нужна помощь в организации ваших фотографий и контактов? Станьте Premium -участником и позвольте lifebox облегчить вашу жизнь. Проверьте наши Premium функции и специальные предложения для вас.";
-"become_premium_header_places_title" = "У нас есть специальное предложение для вас!";
+"become_premium_header_places_title" = "Специальное предложение для вас!";
 "become_premium_header_places_subtitle" = "Хотите сохранить ваши воспоминания в оригинальном качестве? Может быть, вам нужна помощь в организации ваших фотографий и контактов? Станьте Premium -участником и позвольте lifebox облегчить вашу жизнь. Проверьте наши Premium функции и специальные предложения для вас.";
-"become_premium_header_things_title" = "У нас есть специальное предложение для вас!";
+"become_premium_header_things_title" = "Специальное предложение для вас!";
 "become_premium_header_things_subtitle" = "Хотите сохранить ваши воспоминания в оригинальном качестве? Может быть, вам нужна помощь в организации ваших фотографий и контактов? Станьте Premium -участником и позвольте lifebox облегчить вашу жизнь. Проверьте наши Premium функции и специальные предложения для вас.";
-"become_premium_header_contact_sync_title" = "У нас есть специальное предложение для вас!";
+"become_premium_header_contact_sync_title" = "Специальное предложение для вас!";
 "become_premium_header_contact_sync_subtitle" = "Хотите сохранить ваши воспоминания в оригинальном качестве? Может быть, вам нужна помощь в организации ваших фотографий и контактов? Станьте Premium -участником и позвольте lifebox облегчить вашу жизнь. Проверьте наши Premium функции и специальные предложения для вас.";
 "become_premium_description" = "Хранение в Оригинальном Качестве\nНеограниченное Распознавание Лиц&Объектов& Местоположения\nУдаление Повторяющихся Контактов в Телефонном Справочнике\nНеограниченный Анализ Photopick";
 "become_premium_or_text" = "ИЛИ приобретите дополнительное хранилище и получите Premium -функции БЕСПЛАТНО!";
