--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1480,3 +1480,27 @@
 "offer_store_apple_store" = "Apple Store";
 "offer_store_google_store" = "Google Play Store";
 "remove_albums_success_message" = "Albüm(ler) kaldırıldı.";
+"hide_album_action_sheet" = "Album Gizle";
+"sign_up_password_rules" = "Girdiğin şifre kurallarımıza uymuyor";
+"documents_album_card_title" = "Döküman albümünü gizlemek ister misin?";
+"documents_album_card_description" = "Döküman albümünde %d adet obje var. Bu objeleri gizleyebilir ve daha sonra ulaşabilirsin";
+"documents_album_card_hide_button" = "Döküman Albümünü Gizle";
+"documents_album_card_view_button" = "Döküman Albümünü Görüntüle";
+"snackbar_ok" = "Tamam";
+"snackbar_trash_bin" = "Çöp Kutusu";
+"snackbar_hidden_bin" = "Gizli Albüm";
+"analyze_history_delete_success" = "%d dosya(lar) başarıyla silindi";
+"added_to_favorites_message" = "Favorilere eklendi";
+"removed_from_favorites" = "Favorilerden çıkarıldı";
+"added_to_album" = "Albümlere başarıyla eklendi";
+"downloaded_files" = "%d dosya(lar) başarıyla indirildi";
+"edit_saved" = "Kaydedildi";
+"files_moved" = "Dosya(lar) taşındı";
+"success_remove_passcode" = "lifebox parolanı başarılı bir şekilde kaldırdın.";
+"added_to_favorites_from_lifebox" = "Albume başarıyla eklendi";
+"edit_security_question_success" = "Güvenlik sorusu başıyla güncellendi";
+"set_security_question_success" = "Güvenlik sorusu başarıyla eklendi";
+"import_from_instagram_started" = "Instagram’dan fotoğraf aktarma başlatıldı";
+"import_from_facebook_started" = "Facebook’tan fotoğraf aktarma başlatıldı";
+"instapick_hashtags_copied" = "Hashtag'ler kopyalandı";
+"create_story_selection_limit" = "Lütfen en fazla %d fotoğraf seçin";
