--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -391,7 +391,7 @@
 "E-mail Usage Information" = "E-mail Usage Information";
 "Password fields do not match." = "Passwords do not match";
 "Please check the e-mail address." = "Please check the e-mail address.";
-"Please set a password including nonconsecutive letters and numbers, minimum 6 maximum 16 characters." = "Please choose a password with nonconsecutive letters and numbers, between 6 and 16 characters.";
+"Please set a password including nonconsecutive letters and numbers, minimum 6 maximum 16 characters." = "This password does not comply with the password rules below.";
 "Please check the GSM number" = "Please check your Phone number";
 "Login denied. Please check your credentials." = "Login denied. Please check your credentials.";
 "Request failed \n Please try again" = "Request failed \n Please try again";
@@ -1519,7 +1519,7 @@
 "offer_store_google_store" = "Google Play Store";
 "remove_albums_success_message" = "Album(s) removed successfully";
 "hide_album_action_sheet" = "Hide Album";
-"sign_up_password_rules" = "This password does not comply with the password rules below.";
+"sign_up_password_rules" = "Password must be minimum 6 and maximum 16 character, contain at least one number and capital letter, include nonconsecutive letters.";
 "documents_album_card_title" = "Do you want to hide document objects?";
 "documents_album_card_description" = "%d items including screenshots and documents, are grouped in Documents Album. Clean up your gallery by hiding this album. You can access these photos from Hidden album anytime.";
 "documents_album_card_hide_button" = "Hide Documents Album";
@@ -1527,18 +1527,18 @@
 "snackbar_ok" = "OK";
 "snackbar_trash_bin" = "Trash Bin";
 "snackbar_hidden_bin" = "Hidden Bin";
-"analyze_history_delete_success" = "%d item(s) successfully deleted";
+"analyze_history_delete_success" = "%d item(s) deleted";
 "added_to_favorites_message" = "Added to favourites";
 "removed_from_favorites" = "Removed from favorites";
-"added_to_album" = "Successfully added to album";
-"downloaded_files" = "%d file(s) were downloaded successfully";
+"added_to_album" = "Added to album";
+"downloaded_files" = "%d file(s) downloaded";
 "edit_saved" = "Saved";
 "files_moved" = "File(s) moved";
-"success_remove_passcode" = "Passcode removed successfully";
-"added_to_favorites_from_lifebox" = "Successfully added";
-"edit_security_question_success" = "Security question edited successfully";
-"set_security_question_success" = "Security question set successfully";
+"success_remove_passcode" = "Passcode removed";
+"added_to_favorites_from_lifebox" = "Added to favorites";
+"edit_security_question_success" = "Security question edited";
+"set_security_question_success" = "Security question set";
 "import_from_instagram_started" = "Import from Instagram started";
 "import_from_facebook_started" = "Import from Facebook started";
-"instapick_hashtags_copied" = "Hashtags copied successfully";
-"create_story_selection_limit" = "Please Choose %d files at most";
+"instapick_hashtags_copied" = "Hashtags copied";
+"create_story_selection_limit" = "Please choose maximum %d photos";
