--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -373,7 +373,7 @@
 "E-mail Usage Information" = "E-Posta Kullanım Bilgisi";
 "Password fields do not match." = "Şifreler eşleşmiyor";
 "Please check the e-mail address." = "Lütfen e-posta adresini kontrol edin";
-"Please set a password including nonconsecutive letters and numbers, minimum 6 maximum 16 characters." = "Lütfen ardışık olmayan harf ve sayılardan oluşan en az 6 en fazla 16 karakterli bir şifre belirleyin.";
+"Please set a password including nonconsecutive letters and numbers, minimum 6 maximum 16 characters." = "Girdiğin şifre aşağıda belirtilen kurallara uymuyor.";
 "Please check the GSM number" = "Lütfen telefon numaranı kontrol et";
 "Login denied. Please check your credentials." = "Giriş reddedildi. Lütfen giriş bilgilerini kontrol et.";
 "Request failed \n Please try again" = "İstek başarısız\nLütfen tekrar deneyin";
@@ -1481,25 +1481,25 @@
 "offer_store_google_store" = "Google Play Store";
 "remove_albums_success_message" = "Albüm(ler) kaldırıldı.";
 "hide_album_action_sheet" = "Album Gizle";
-"sign_up_password_rules" = "Girdiğin şifre kurallarımıza uymuyor";
+"sign_up_password_rules" = "Lütfen ardışık olmayan harf ve sayılardan oluşan, en az 6 en fazla 16 karakterli bir şifre belirleyin.";
 "documents_album_card_title" = "Döküman albümünü gizlemek ister misin?";
 "documents_album_card_description" = "Döküman albümünde %d adet obje var. Bu objeleri gizleyebilir ve daha sonra ulaşabilirsin";
-"documents_album_card_hide_button" = "Döküman Albümünü Gizle";
-"documents_album_card_view_button" = "Döküman Albümünü Görüntüle";
+"documents_album_card_hide_button" = "Dökümanları gizle";
+"documents_album_card_view_button" = "Dökümanları görüntüle";
 "snackbar_ok" = "Tamam";
 "snackbar_trash_bin" = "Çöp Kutusu";
 "snackbar_hidden_bin" = "Gizli Albüm";
-"analyze_history_delete_success" = "%d dosya(lar) başarıyla silindi";
+"analyze_history_delete_success" = "%d dosya(lar) silindi";
 "added_to_favorites_message" = "Favorilere eklendi";
 "removed_from_favorites" = "Favorilerden çıkarıldı";
-"added_to_album" = "Albümlere başarıyla eklendi";
-"downloaded_files" = "%d dosya(lar) başarıyla indirildi";
+"added_to_album" = "Albümle eklendi";
+"downloaded_files" = "%d dosya indirildi";
 "edit_saved" = "Kaydedildi";
 "files_moved" = "Dosya(lar) taşındı";
-"success_remove_passcode" = "lifebox parolanı başarılı bir şekilde kaldırdın.";
-"added_to_favorites_from_lifebox" = "Albume başarıyla eklendi";
-"edit_security_question_success" = "Güvenlik sorusu başıyla güncellendi";
-"set_security_question_success" = "Güvenlik sorusu başarıyla eklendi";
+"success_remove_passcode" = "Parola kaldırıldı";
+"added_to_favorites_from_lifebox" = "Albume eklendi";
+"edit_security_question_success" = "Güvenlik sorusu güncellendi";
+"set_security_question_success" = "Güvenlik sorusu eklendi";
 "import_from_instagram_started" = "Instagram’dan fotoğraf aktarma başlatıldı";
 "import_from_facebook_started" = "Facebook’tan fotoğraf aktarma başlatıldı";
 "instapick_hashtags_copied" = "Hashtag'ler kopyalandı";
