FE-2493 - details view and logic

--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1528,3 +1528,4 @@
 "snackbar_retry" = "Retry";
 "snackbar_undo" = "Undo";
 "remove_albums_success_message" = "Album(s) removed successfully";
+"file_info_people" = "Enable face and image recognition to see people in photos.";
