--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -615,7 +615,7 @@
 "%d%% Restored…" = "%d%% Restored…";
 "%d%% Analyzed…" = "%d%% Analyzed…";
 "START USING" = "Get Started";
-"landingTitle0" = "Live, Collect, Remember";
+"landingTitle0" = "Live. Collect, Remember";
 "landingSubTitle0" = "Backup your photos, videos, contacts and other files at lifebox and keep them forever";
 "landingTitle1" = "Auto-Sync";
 "landingSubTitle1" = "Sync your photos and videos automatically and access them wherever you are";
@@ -1018,7 +1018,7 @@
 "create_story_press_and_hold_description" = "%@ on the image to rearrange the order of your story.";
 "create_story_name_title" = "Story Name";
 "create_story_pop_up_title" = "You created a story! \n %@";
-"create_story_pop_up_message" = "We're preparing your story. Once it is finished, you can find it under \n%@";
+"create_story_pop_up_message" = "You created a story. (We are preparing your story. Once it finished, you can access it from Videos Album)";
 "create_story_path_to_story" = "Photos & Videos > My Stories";
 "You can not share empty album" = "You can not share empty album";
 "etk_permission_description" = "I hereby give my consent to receive commercial e-mail messages in order to be informed about advantageous products and services of Turkcell and its Group Companies unless and until I request otherwise pursuant to the Law No. 6563 and other applicable legislation.";
@@ -1402,7 +1402,7 @@
 "delete_from_hidden_bin_popup_success_text" = "The selected files will be removed to trash bin. You can restore them in 30 days. Please empty your trash bin in case of need for freeing up space. Trash bin is located in All Files Menu.";
 "unhide_popup_success_title" = "Item(s) unhidden successfully.";
 "delete_popup_text" = "The selected file(s) will be removed to trash bin. You can restore them in 30 days. Please empty your trash bin in case of need for freeing up space. Trash bin is located in All Files Menu.";
-"PackagesPolicyTextBillo" = "Subsriptions are renewed on a monthly basis\nPayment will be charged to iTunes Account at confirmation of purchase \nSubscription automatically renews unless auto-renew is turned off at least 24-hours before the end of the current period \nAccount will be charged for renewal within 24-hours prior to the end of the current period. The fees are reflected as they are shown on the in-app purchase screen. \nSubscriptions may be managed by the user and auto-renewal may be turned off by going to the user's Account Settings after purchase \nAny unused portion of a free trial period, if offered, will be forfeited when the user purchases a subscription to that publication, where applicable \nPrivacy Policy: https://mybilloapp.com/policy\nTerms of Use:";
+"PackagesPolicyTextBillo" = "Subsriptions are renewed on a monthly basis\nPayment will be charged to iTunes Account at confirmation of purchase \nSubscription automatically renews unless auto-renew is turned off at least 24-hours before the end of the current period \nAccount will be charged for renewal within 24-hours prior to the end of the current period. The fees are reflected as they are shown on the in-app purchase screen. \nSubscriptions may be managed by the user and auto-renewal may be turned off by going to the user's Account Settings after purchase \nAny unused portion of a free trial period, if offered, will be forfeited when the user purchases a subscription to that publication, where applicable \nPrivacy Policy: https://billostorage.com/policy\nTerms of Use:";
 "unhide_items_popup_text" = "Selected item(s) will be unhidden and moved back to previous folders.";
 "unhide_albums_popup_text" = "Selected album(s) will be unhidden and moved back to previous folders.";
 "move_to_trash_hidden_albums_confirmation_popup_text" = "The selected album(s) will be removed to trash bin. You can restore them in 30 days. Please empty your trash bin in case of need for freeing up space. Trash bin is located in All Files Menu.";
@@ -1518,4 +1518,31 @@
 "offer_store_apple_store" = "Apple Store";
 "offer_store_google_store" = "Google Play Store";
 "remove_albums_success_message" = "Album(s) removed successfully";
+"hide_album_action_sheet" = "Hide Album";
+"sign_up_password_rules" = "Password must be minimum 6 and maximum 16 character, contain at least one number and capital letter, include nonconsecutive letters.";
+"documents_album_card_title" = "Do you want to hide document objects?";
+"documents_album_card_description" = "%d items including screenshots and documents are grouped in Documents Album. Clean up your gallery by hiding this album. You can access these photos from Hidden Album anytime.";
+"documents_album_card_hide_button" = "Hide Documents Album";
+"documents_album_card_view_button" = "View Documents Album";
+"snackbar_ok" = "OK";
+"snackbar_trash_bin" = "Trash Bin";
+"snackbar_hidden_bin" = "Hidden Bin";
+"analyze_history_delete_success" = "%d item(s) deleted";
+"added_to_favorites_message" = "Added to favourites";
+"removed_from_favorites" = "Removed from favorites";
+"added_to_album" = "Added to album";
+"downloaded_files" = "%d file(s) downloaded";
+"edit_saved" = "Saved";
+"files_moved" = "File(s) moved";
+"success_remove_passcode" = "Passcode removed";
+"added_to_favorites_from_lifebox" = "Added to favorites";
+"edit_security_question_success" = "Security question edited";
+"set_security_question_success" = "Security question set";
+"import_from_instagram_started" = "Import from Instagram started";
+"import_from_facebook_started" = "Import from Facebook started";
+"instapick_hashtags_copied" = "Hashtags copied";
+"create_story_selection_limit" = "Please choose maximum %d photos";
 "etk_html" = "<p><b> >THIS IS A NEW ETK AND KVKK TEXT</b></p>\n<p style=\"color:DodgerBlue;\">Lorem ipsum...</p>\n<p>i. If you can't log in via E-mail, you can access your account by entering your phone number and the password you used to create your account.</p>\n<p>ii. If you don't remember your password, you can log in via receiving a Turkcell password.</p>\n<p> iii. In case you forget your Turkcell password, type SIFRE and send it to 2200 if you are a Turkcell customer so you can get your password. </p> \n<p>iv. If you think you have entered your password and e-mail correctly but you still can not log in; -you can renew your password via I forgot my password option and try to login again.</p> \n<p>v. If you receive an alert saying your e-mail/phone number or password are incorrect, you can access your account and check your e-mail and phone number data from your profile by using the Turkcell password that you will receive along with the email or phone number data that you can verify. You can change your e-mail, you can't change your phone number. Each phone number remains connected to only one account.</p> \n\n<p><b>If you are not a subscriber of Turkcell; </b></p> \n<p>i. You can't log in with a Turkcell password. </p> \n<p>ii. You can change your phone number from your profile page after you log in.</p>\n";
+"free_up_space_alert_title" = "Free Up Space";
+"free_up_space_no_duplicates" = "You have no duplicate photos/videos";
+"free_up_space_in_progress" = "Your duplicate file list is not ready yet, please try again later";
