--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1004,7 +1004,7 @@
 "etk_permission_description" = "Turkcell ve Grup Şirketleri’nin avantajlı ürün ve hizmetlerden haberdar olmak için 6563 sayılı Kanun ve diğer ilgili mevzuat uyarınca aksi tarafımca belirtilene kadar ticari elektronik ileti almak istiyorum.";
 "global_permission_title_label" = "Global Veri Paylaşımı";
 "global_permission_description" = "Kişisel verilerimin ilgili operatörün lifebox’a yönelik avantajlı hizmetlerinden faydalanabilmem için Turkcell tarafından bulunduğum ülkede işbirliği yapılan operatörle paylaşılmasına izin veriyorum.";
-"terms_and_use_etk_checkbox_header" = "Ticari Elektronik İleti";
+"terms_and_use_etk_checkbox_header" = "Ticari Elektronik İleti ve Veri İzni metnini okudum ve kabul ediyorum.";
 "global_data_permission_agreement" = "Kişisel verilerimin ilgili operatörün lifebox’a yönelik avantajlı hizmetlerinden faydalanabilmem için Turkcell tarafından bulunduğum ülkede işbirliği yapılan operatörle paylaşılmasına izin veriyorum. Detaylı bilgi için tıklayınız.";
 "global_data_permission_link" = "Detaylı bilgi için tıklayınız.";
 "global_permission_header" = "Global Veri Paylaşımı";
@@ -1364,7 +1364,7 @@
 "delete_from_hidden_bin_popup_success_text" = "Seçilen dosya(lar) çöp kutusuna taşınacak. 30 gün içinde geri alabileceksin. lifebox hafızanda yer açman gerekirse öncelikle çöp kutusunu boşaltmayı unutma. Çöp kutusuna \"Tüm Dosyalar\" menüsünden ulaşabilirsin.";
 "unhide_popup_success_title" = "Öğe(ler) geri yüklendi.";
 "delete_popup_text" = "Seçilen dosya(lar) çöp kutusuna taşınacak. 30 gün içinde geri alabileceksin. lifebox hafızanda yer açman gerekirse öncelikle çöp kutusunu boşaltmayı unutma. Çöp kutusuna \"Tüm Dosyalar\" menüsünden ulaşabilirsin.";
-"PackagesPolicyTextBillo" = "Abonelikler aylık bazda yenilenmekte ve ödeme, satın alma onayından sonra iTunes hesabına faturalandırılmaktadır. \nOtomatik yenileme mevcut dönemin sona ermesinden en az 24 saat önce kapatılmazsa abonelik otomatik olarak yenilenir. \nHesap, mevcut dönemin sona ermesine 24 saat kala yenileme işlemi doğrultusunda ücretlendirilecektir. Ücretler uygulama içi satın alma ekranında gösterildiği gibi yansıtılacaktır.\nAbonelikler kullanıcı tarafından yönetilebilir ve otomatik yenileme, satın alma işleminden sonra kullanıcının Hesap Ayarlarına giderek kapatılabilir. \nGizlilik ve Güvenlik: https://mybilloapp.com/policy\nKullanım Şartları:";
+"PackagesPolicyTextBillo" = "Abonelikler aylık bazda yenilenmekte ve ödeme, satın alma onayından sonra iTunes hesabına faturalandırılmaktadır. \nOtomatik yenileme mevcut dönemin sona ermesinden en az 24 saat önce kapatılmazsa abonelik otomatik olarak yenilenir. \nHesap, mevcut dönemin sona ermesine 24 saat kala yenileme işlemi doğrultusunda ücretlendirilecektir. Ücretler uygulama içi satın alma ekranında gösterildiği gibi yansıtılacaktır.\nAbonelikler kullanıcı tarafından yönetilebilir ve otomatik yenileme, satın alma işleminden sonra kullanıcının Hesap Ayarlarına giderek kapatılabilir. \nGizlilik ve Güvenlik: https://billostorage.com/policy\nKullanım Şartları:";
 "unhide_items_popup_text" = "Seçilen öğe(ler) eski klasörlerine geri taşınacak ve lifebox listelerinde görüntülenebilmeye başlayacak. Devam etmek istiyor musun?";
 "unhide_albums_popup_text" = "Seçilen albüm(ler) ve içerikleri eski klasörlerine geri taşınacak ve lifebox listelerinde görüntülenebilmeye başlayacak. Devam etmek istiyor musun?";
 "move_to_trash_hidden_albums_confirmation_popup_text" = "Seçilen albüm(ler) ve içerikleri çöp kutusuna taşınacak. Albüm ve içindeki öğeleri 30 gün içinde geri alabileceksin. lifebox hafızanda yer açman gerekirse öncelikle çöp kutusunu boşaltmayı unutma. Çöp kutusuna \"Tüm Dosyalar\" menüsünden ulaşabilirsin.";
@@ -1410,8 +1410,8 @@
 "mobile_payment_close_popup_title" = "Mobil Ödeme İznini Kapat";
 "mobile_payment_close_popup_description" = "Mobil Ödeme İznini kapatmak için 532 Müşteri Hizmetlerini arayabilirsin.";
 "mobile_payment_close_popup_description_bold_range" = "532";
-"mobile_payment_open_popup_title" = "Haftalık 2GB İnternet Hediye!";
-"mobile_payment_open_popup_description" = "Mobil Ödeme İznini aktifleştirerek Haftalık 2GB internet kazanabilirsin. Tek seferlik haftalık her yöne geçerli 2GB internetini kazanmak için Devam butonuna tıkla!\n\nKampanya ile ilgili detaylara www.turkcell.com.tr adresinden ulaşabilirsin.";
+"mobile_payment_open_popup_title" = "İzninize Hediye 2GB!";
+"mobile_payment_open_popup_description" = "Alışverişlerinizi evde kaldığımız bu dönemde Turkcell faturanıza yansıtarak güvenle tamamlayabilirsiniz. Üstelik şimdi bu yöntemi kullanmak için izin verenler haftalık 2GB internet kazanıyor!\nHemen kazanmak için Devam butonuna tıkla!\n\nOnay vermeniz halinde ek hiçbir ücretlendirme yapılmayacaktır.\nKampanya ile ilgili detaylara www.turkcell.com.tr adresinden ulaşabilirsiniz.";
 "mobile_payment_open_popup_description_bold_range" = "";
 "mobile_payment_open_popup_later_button" = "Daha Sonra";
 "mobile_payment_open_popup_continue_button" = "Devam";
@@ -1480,3 +1480,31 @@
 "offer_store_apple_store" = "Apple Store";
 "offer_store_google_store" = "Google Play Store";
 "remove_albums_success_message" = "Albüm(ler) kaldırıldı.";
+"hide_album_action_sheet" = "Album Gizle";
+"sign_up_password_rules" = "Lütfen ardışık olmayan harf ve sayılardan oluşan, en az 6 en fazla 16 karakterli bir şifre belirleyin.";
+"documents_album_card_title" = "Döküman albümünü gizlemek ister misin?";
+"documents_album_card_description" = "Döküman albümünde %d adet fotoğraf var. Bu albümü gizleyebilir ve daha sonra ulaşabilirsin";
+"documents_album_card_hide_button" = "Döküman albümünü gizle";
+"documents_album_card_view_button" = "Döküman albümünü görüntüle";
+"snackbar_ok" = "Tamam";
+"snackbar_trash_bin" = "Çöp Kutusu";
+"snackbar_hidden_bin" = "Gizli Albüm";
+"analyze_history_delete_success" = "%d dosya(lar) silindi";
+"added_to_favorites_message" = "Favorilere eklendi";
+"removed_from_favorites" = "Favorilerden çıkarıldı";
+"added_to_album" = "Albümle eklendi";
+"downloaded_files" = "%d dosya indirildi";
+"edit_saved" = "Kaydedildi";
+"files_moved" = "Dosya(lar) taşındı";
+"success_remove_passcode" = "Parola kaldırıldı";
+"added_to_favorites_from_lifebox" = "Albume eklendi";
+"edit_security_question_success" = "Güvenlik sorusu güncellendi";
+"set_security_question_success" = "Güvenlik sorusu eklendi";
+"import_from_instagram_started" = "Instagram’dan fotoğraf aktarma başlatıldı";
+"import_from_facebook_started" = "Facebook’tan fotoğraf aktarma başlatıldı";
+"instapick_hashtags_copied" = "Hashtag'ler kopyalandı";
+"create_story_selection_limit" = "Lütfen en fazla %d fotoğraf seçin";
+"etk_html" = "<p><b>TİCARİ ELEKTRONİK İLETİ VE VERİ İZNİ</b></p>\n\n<p>Lifecell Bulut Çözümleri A.Ş., Turkcell İletişim Hizmetleri A.Ş. ve <a href=\"https://www.turkcell.com.tr/tr/gizlilik-ve-guvenlik?page=kisisel-verilerin-korunmasi\">Grup Şirketleri</a> tarafından ihtiyaç ve tercihlerim doğrultusunda tarafıma uygun indirimlerin, fırsatların ve özel tekliflerin belirlenebilmesi ve bu şirketlerin avantajlı ürün ve hizmetlerinden haberdar edilebilmem için “https://www.turkcell.com.tr/tr/gizlilik-ve-guvenlik?page=kisisel-verilerin-korunmasi” adresinden okuduğum “İzin Politikası” kapsamında kişisel verilerimin işlenmesini ve İzin Politikası’nda belirtilen taraflarla paylaşılmasını, 6563 sayılı Kanun ve diğer ilgili mevzuat uyarınca aksi tarafımca belirtilene kadar ticari elektronik ileti gönderilmesini kabul ediyorum. Kişisel verilerimin işlenmesini/paylaşılmasını ya da ticari elektronik ileti almak istememem durumunda vermiş olduğum izinleri iptal edebileceğimi, izinlerin kapsamı ve iptali hakkında detaylı bilginin “<a href=\"https://www.turkcell.com.tr/tr/gizlilik-ve-guvenlik?page=kisisel-verilerin-korunmasi\">İzin Politikası</a>”nda yer aldığını biliyorum.</p>\n\n";
+"free_up_space_alert_title" = "Yer Aç";
+"free_up_space_no_duplicates" = "Hem cihazında hem lifebox'ında olan photo/video yok";
+"free_up_space_in_progress" = "Hazırlanıyor, lütfen daha sonra tekrar dene";
