--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -771,6 +771,7 @@
 "face_image_thing_recognition" = "Things";
 "face_image_enable" = "Enable Face Image Grouping";
 "face_image_enable_message_text" = "When you enable Face&Image Recognition feature, the photos you have uploaded will be grouped according to the faces and objects.";
+"face_image_enable_snack_text" = "Face Image Grouping Enabled! Grouping of your photos will take some time. Please check later.";
 
 /*PackageViewController*/
 "package_cancel_button" = "Cancel your subscription";
