--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -1546,3 +1546,6 @@
 "import_from_facebook_started" = "Import from Facebook started";
 "instapick_hashtags_copied" = "Hashtags copied";
 "create_story_selection_limit" = "Please choose maximum %d photos";
+"contact_phase2_backup_contacts_title" = "Back up contacts";
+"contact_phase2_backup_contacts_message" = "You can backup your contacts to lifebox.\nBy doing that you can easly access your contact list from any device and anywhere.";
+"contact_phase2_backup_contacts_button" = "Back up Now";
