--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -638,6 +638,7 @@
 "The purchase was canceled" = "The purchase is canceled.";
 "The purchase in progress" = "The purchase is in progress.";
 "You have no duplicated contacts!" = "You have no duplicated contacts in your device contact list";
+"Off" = "Off";
 "Daily" = "Daily";
 "Weekly" = "Weekly";
 "Monthly" = "Monthly";
